Fix bats making a scrollbar
Bats outside the screen should not make a scrollbar.

--- a/static/themes/bat/bat.css
+++ b/static/themes/bat/bat.css
@@ -5,6 +5,7 @@
   top: 0;
   bottom: 0;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .bat {
